Correção do crud do cliente, unclusão das páginas de venda, consulta de livros e adição de produtos no carrinho